Closed
Bug 685258
Opened 10 years ago
Closed 8 years ago
Pulse audio backend does not check provided playback and crashes
Categories
(Core :: Audio/Video, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: romaxa, Assigned: romaxa)
References
Details
Attachments
(1 file)
1.08 KB,
patch
|
derf
:
review+
|
Details | Diff | Splinter Review |
On attempt to enabled pulseaudio backend I see this crash: #0 strcpy () at ../ports/sysdeps/arm/strcpy.S:69 #1 0x3b50af44 in sa_stream_create_pcm (_s=0x4251bec8, client_name=0x0, mode=SA_MODE_WRONLY, format=SA_PCM_FORMAT_S16_LE, rate=44100, n_channels=994955412) at /home/romaxa/mozdev/mozillahg/mozilla-central/media/libsydneyaudio/src/sydney_audio_pulseaudio.c:219 #2 0x00000000 in ?? ()
Assignee | ||
Comment 1•10 years ago
|
||
Not sure if it will be useful after bug 623444 fix... but anyway.
Updated•10 years ago
|
Attachment #558905 -
Flags: review?(tterribe) → review+
Assignee | ||
Updated•10 years ago
|
Keywords: checkin-needed
Updated•10 years ago
|
Keywords: checkin-needed
Whiteboard: [inbound]
Comment 2•10 years ago
|
||
This was backed out of mozilla-inbound as part of this push <https://tbpl.mozilla.org/?tree=Mozilla-Inbound&usebuildbot=1&rev=9f150c4e1a48> which turned the 32-bit OS X reftests perma-orange.
Whiteboard: [inbound]
Comment 3•8 years ago
|
||
sydneyaudio has been removed from the tree. The PulseAudio backend for cubeb does not suffer from this bug, so marking fixed.
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•