Bug 685258 - Pulse audio backend does not check provided playback and crashes r=derf