content/media/nsAudioStream.cpp
@@ -413,7 +413,7 @@ nsresult nsAudioStreamLocal::Init(PRInt32 aNumChannels, PRInt32 aRate, SampleFor
   mFormat = aFormat;
 
   if (sa_stream_create_pcm(reinterpret_cast<sa_stream_t**>(&mAudioHandle),
-                           NULL, 
+                           "Mozilla", 
                            SA_MODE_WRONLY, 
                            SA_PCM_FORMAT_S16_NE,
                            aRate,
